trunk/Archive2/ec/f304748b675f2e/output
main.cpp:12:61: error: expected ';' at end of declaration
    double mpg, distance, gallons, pricepergallon, totalcost
                                                            ^
                                                            ;
1 error generated.
